--- a/resources/views/layouts/master.njk
+++ b/resources/views/layouts/master.njk
@@ -34,6 +34,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ currentUser.username }} <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="/my_tickets">My Tickets</a></li>
+                  <li><a href="/categories">Categories</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="/logout">Logout</a></li>
                 </ul>
