--- a/resources/views/layouts/master.njk
+++ b/resources/views/layouts/master.njk
@@ -35,6 +35,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="/my_tickets">My Tickets</a></li>
                   <li><a href="/categories">Categories</a></li>
+                  <li><a href="/departments">Departments</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="/logout">Logout</a></li>
                 </ul>
