--- a/resources/views/category/add.njk
+++ b/resources/views/category/add.njk
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <div class="panel panel-default">
-                <div class="panel-heading">Open New Ticket</div>
+                <div class="panel-heading">Create new category</div>
 
                 <div class="panel-body">
                     {% include 'includes.status' %}
@@ -25,7 +25,7 @@
 
                         <div class="form-group">
                             <div class="col-md-6 col-md-offset-4">
-                                {{ form.button('Open Ticket', null, { class: 'btn btn-primary' }) }}
+                                {{ form.button('Add category', null, { class: 'btn btn-primary' }) }}
                             </div>
                         </div>
                     {{ form.close() }}
