--- a/resources/views/layouts/master.njk
+++ b/resources/views/layouts/master.njk
@@ -36,6 +36,7 @@
                   <li><a href="/my_tickets">My Tickets</a></li>
                   <li><a href="/categories">Categories</a></li>
                   <li><a href="/departments">Departments</a></li>
+                  <li><a href="/items"><i class="zmdi zmdi-collection-text"></i><span> List Item</span></a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="/logout">Logout</a></li>
                 </ul>
