--- a/resources/views/layouts/master.njk
+++ b/resources/views/layouts/master.njk
@@ -2,18 +2,22 @@
 
 <!doctype html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Adonis Support - {% block title %}{% endblock %}</title>
+    <title>Adonis Support -
+      {% block title %}{% endblock %}
+    </title>
 
     <link rel="icon" href="/assets/favicon.png" type="image/x-icon">
 
+    <link href="/print.min.css" type="style/css" rel="stylesheet" />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
@@ -29,35 +33,59 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             {% ifAsync currentUser %}
-              <li><a href="/new_ticket">Open Ticket</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ currentUser.username }} <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/my_tickets">My Tickets</a></li>
-                  <li><a href="/categories">Categories</a></li>
-                  <li><a href="/departments">Departments</a></li>
-                  <li><a href="/report">Report</a></li>
-                  <li><a href="/users">Users</a></li>
-                  <li><a href="/items"><i class="zmdi zmdi-collection-text"></i><span> List Item</span></a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="/logout">Logout</a></li>
-                </ul>
-              </li>
+            <li>
+              <a href="/new_ticket">Open Ticket</a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ currentUser.username }}
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="/my_tickets">My Tickets</a>
+                </li>
+                <li>
+                  <a href="/categories">Categories</a>
+                </li>
+                <li>
+                  <a href="/departments">Departments</a>
+                </li>
+                <li>
+                  <a href="/report">Report</a>
+                </li>
+                <li>
+                  <a href="/users">Users</a>
+                </li>
+                <li>
+                  <a href="/items">
+                    <i class="zmdi zmdi-collection-text"></i>
+                    <span>
+                      List Item</span></a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
+                  <a href="/logout">Logout</a>
+                </li>
+              </ul>
+            </li>
 
-            {% else %}
-              <li><a href="/login">Login</a></li>
-              <li><a href="/register">Register</a></li>
-            {% endif %}
-          </ul>
-        </div>
+          {% else %}
+            <li>
+              <a href="/login">Login</a>
+            </li>
+            <li>
+              <a href="/register">Register</a>
+            </li>
+          {% endif %}
+        </ul>
       </div>
-    </nav>
-
-    <div class="container">
-      {% block content %}{% endblock %}
     </div>
+  </nav>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <div class="container">
+    {% block content %}{% endblock %}
+  </div>
+  <script src="/print.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
