--- a/resources/views/welcome.njk
+++ b/resources/views/welcome.njk
@@ -1,28 +1,33 @@
 {% extends 'layouts.master' %}
 
-{% block title %} Welcome {% endblock %}
+{% block title %}
+  Welcome
+{% endblock %}
 
 {% block content %}
   <div class="container">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <p>Welcome!</p>
+      <div class="col-md-10 col-md-offset-1">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p>Welcome!</p>
 
-                    {% if currentUser.is_admin %}
-                        <p>
-                            See all <a href="/admin/tickets">tickets</a>
-                        </p>
-                    {% else %}
-                        <p>
-                            See all your <a href="/my_tickets">tickets</a> or <a href="/new_ticket">open new ticket</a>
-                        </p>
-                    {% endif %}
-                </div>
-            </div>
+            {% if currentUser.is_admin %}
+              <p>
+                See all
+                <a href="/admin/tickets">tickets</a>
+              </p>
+            {% else %}
+              <p>
+                See all your
+                <a href="/my_tickets">tickets</a>
+                or
+                <a href="/new_ticket">open new ticket</a>
+              </p>
+            {% endif %}
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 {% endblock %}
-
