set up the print report

--- a/resources/views/report/detail.njk
+++ b/resources/views/report/detail.njk
@@ -77,6 +77,10 @@
 
             <hr>
 
+            <button type="button" class="btn btn-success btn-sm" onclick="printJS('printJS-form', 'html')">
+              Print Form
+            </button>
+
           </div>
 
         </div>
@@ -85,9 +89,5 @@
   </div>
 
 </form>
-
-<button type="button" onclick="printJS('printJS-form', 'html')">
-  Print Form
-</button>
 
 {% endblock %}
