--- a/resources/views/layouts/master.njk
+++ b/resources/views/layouts/master.njk
@@ -13,9 +13,21 @@
 
     <link rel="icon" href="/assets/favicon.png" type="image/x-icon">
 
-    <link href="/print.min.css" type="style/css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/plugins/morris/morris.css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/core.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/components.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/icons.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/pages.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/menu.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
+
+    <link href="/assets/plugins/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+
+    <link href="/print.min.css" type="style/css" rel="stylesheet" />
+    <script src="/assets/js/modernizr.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-default">
